manual and cli component creation

--- a/angular-crud/src/app/app.component.html
+++ b/angular-crud/src/app/app.component.html
@@ -1,2 +1,4 @@
-<input type="text" [(ngModel)]="inputText">
-<p>{{inputText}}</p>
+<!-- <input type="text" [(ngModel)]="inputText">
+<p>{{inputText}}</p> -->
+<app-first></app-first>
+<app-second></app-second>
