--- a/angular-crud/src/app/app.component.html
+++ b/angular-crud/src/app/app.component.html
@@ -3,3 +3,6 @@
 <app-first></app-first>
 <app-second></app-second>
 <app-data-binding></app-data-binding>
+<br />
+<!-- DIRECTIVES -->
+<app-details></app-details>
