input output custom events and property binding

--- a/angular-crud/src/app/app.component.html
+++ b/angular-crud/src/app/app.component.html
@@ -6,3 +6,4 @@
 <br />
 <!-- DIRECTIVES -->
 <app-details></app-details>
+<app-inputoutput [serverData]="serverData" (eventFromApp)="eventFromApp()" staticData="static data"></app-inputoutput>
