--- a/angular-crud/src/app/app.component.html
+++ b/angular-crud/src/app/app.component.html
@@ -7,3 +7,4 @@
 <!-- DIRECTIVES -->
 <app-details></app-details>
 <app-inputoutput [serverData]="serverData" (eventFromApp)="eventFromApp()" staticData="static data"></app-inputoutput>
+<p>paragraph in app component</p>
