game control task

--- a/angular-crud/src/app/components/InputOutput/inputoutput.component.html
+++ b/angular-crud/src/app/components/InputOutput/inputoutput.component.html
@@ -25,4 +25,6 @@
         <li>{{item}}</li>
     </ul>
 </section>
+<!-- ng-content is added because if we are passing any elements from parent between opening and closing tags. To access those we are using this  -->
+<ng-content></ng-content>
 <p> parangraph in input output component (child of app)</p>
